# rstcheck

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc.spelling.toml  .readthedocs.yaml  .rstcheck.project.cfg  .travis.yml  .yamllint.yaml  AUTHORS.rst  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.rst  bad_bash.rst  bad_cpp.rst  bad_python.rst  bad_rst.rst  good.rst  prep_release.py  pyproject.toml  rstcheck  rstcheck.py  setup.py  spelling_dict.txt  test.bash  test_rstcheck.py  tox.ini  unknown.rst
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report-lib.yaml  bug-report-tool.yaml  feature-request.yaml  question.yaml
.github/workflows/: codeql-analysis.yml  documentation.yaml  documentation.yml  qa.yaml  qa.yml  test.yaml  test.yml  update-authors.yaml
docs/source/: _badges.rst  api.rst  changelog.md  cli.rst  conf.py  faq.rst  index.rst  installation.rst  migrations.rst  objects.inv  objects.pattern.inv  objects.pydantic.inv  objects.sphinx.inv  spelling_dict.txt  usage.rst
docs/source/autoapidoc/: rstcheck.rst
docs/source/usage/: cli.rst  config.rst  index.rst  integration.rst  library.rst
docs/source/workflows/: development.rst  index.rst  releases.rst
examples/: bad_bash.rst  bad_rst_in_rst.rst  good_cpp_with_local_include.rst  test.rst  unicode.rst  unknown.rst
examples/bad/: bad_bash.rst  bad_code.rst  bad_cpp.rst
examples/custom/: good_with_custom.rst
examples/good/: bom.rst  good.rst  good_cpp_with_local_include.rst  good_markdown.rst  simple.rst  unicode.rst
examples/sphinx/: good.rst
examples/with_configuration/: .rstcheck.cfg  bad.rst  good.rst  pyproject.toml  rstcheck.ini
examples/without_configuration/: good.rst
rstcheck/: __init__.py  config.py
src/rstcheck/: __init__.py  __main__.py  _cli.py  _compat.py  _docutils.py  _extras.py  _sphinx.py  checker.py  cli.py  config.py  inline_config.py  runner.py  types.py
testing/examples/bad/: bad_rst_in_rst.rst  code_directive_without_language.rst  markdown.rst  table_substitutions.rst
testing/examples/custom/: custom_directive_and_role.rst  rstcheck.custom.ini
testing/examples/good/: bom.rst  good.rst  markdown.rst  rst.rst
testing/examples/inline_config/: with_inline_ignore.rst  with_inline_skip_code_block.rst  with_nested_inline_skip_code_block.rst  without_inline_ignore.rst
testing/examples/with_configuration/: .rstcheck.cfg  bad-2.rst  bad.rst  bad_config.cfg  bad_config.toml  bad_rst.rst  good.rst  pyproject.toml  rstcheck.ini
testing/examples/with_configuration/dummydir/: readme.txt
testing/examples/without_configuration/: bad.rst
tests/: _cli_test.py  conftest.py  test__cli.py  test__docutils.py  test__extras.py  test__sphinx.py  test_as_cli_tool.py  test_checker.py  test_cli.py  test_config.py  test_inline_config.py  test_rstcheck.py  test_runner.py
tests/integration_tests/: cli_test.py  conftest.py  test_cli.py
